...

import androidx.compose.ui.semantics.SemanticsPropertyKey

internal const val CAROUSEL_TAG = "carousel"
internal val CarouselVirtualPageKey = SemanticsPropertyKey<Int>("CarouselVirtualPage")

internal const val HOME_SCREEN_TAG = "home_screen"
internal const val HOME_WALLPAPER_TAG = "home_wallpaper"
internal const val HOME_BOTTOM_BAR_TAG = "home_bottom_bar"
internal const val CRASH_BANNER_TAG = "crash_banner"
internal const val TELEMETRY_CONSENT_TAG = "telemetry_consent"
internal const val TELEMETRY_CONSENT_ALLOW_TAG = "telemetry_consent_allow"
internal const val TELEMETRY_CONSENT_DENY_TAG = "telemetry_consent_deny"
internal const val TELEMETRY_CONSENT_BADGE_TAG = "telemetry_consent_badge"
internal const val CRASH_BANNER_SHARE_TAG = "crash_banner_share"
internal const val CRASH_BANNER_DISMISS_TAG = "crash_banner_dismiss"
internal const val CRASH_PENDING_BADGE_TAG = "crash_pending_badge"
internal const val WIDGETS_SCREEN_TAG = "widgets_screen"
internal const val AGENDA_SCREEN_TAG = "agenda_screen"
internal const val SEARCH_FIELD_TAG = "search_field"
internal const val APPS_CARD_TAG = "apps_card"
internal const val APPS_LIST_TAG = "apps_list"
internal const val APPS_LOADING_TAG = "apps_loading"
internal const val HOME_SEARCH_APP_STORE_TAG = "home_search_app_store"
internal const val APP_ROW_TAG = "app_row"
internal const val CONTACT_RESULT_ROW_TAG = "contact_result_row"
internal const val CONTACT_RESULT_STARRED_TAG = "contact_result_starred"
...
internal const val BADGE_PICKER_DIALOG_CANCEL_TAG = "badge_picker_dialog_cancel"
internal const val BADGE_PICKER_DEFAULT_TILE_TAG = "badge_picker_default_tile"
internal const val BADGE_PICKER_PRESET_TILE_TAG = "badge_picker_preset_tile"
internal const val BADGE_PICKER_FLAG_GRID_TAG = "badge_picker_flag_grid"
internal const val BADGE_PICKER_FLAG_TILE_TAG = "badge_picker_flag_tile"
internal const val DISMISS_RECENT_ACTION_TAG = "dismiss_recent_action"
internal const val DOCK_CARD_TAG = "dock_card"
internal const val DOCK_LIST_TAG = "dock_list"
internal const val DOCK_HINT_TAG = "dock_hint"
internal const val DOCK_ADD_BUTTON_TAG = "dock_add_button"
internal const val DOCK_APP_TAG = "dock_app"
internal const val DOCK_APP_ICON_TAG = "dock_app_icon"
internal const val DOCK_APP_TITLE_TAG = "dock_app_title"
...
internal const val ICON_SHAPE_OPTION_SQUIRCLE_TAG = "icon_shape_option_squircle"
internal const val ICON_THEME_DROPDOWN_TAG = "icon_theme_dropdown"
internal const val ICON_THEME_DROPDOWN_MENU_TAG = "icon_theme_dropdown_menu"
internal const val ICON_THEME_OPTION_DEFAULT_TAG = "icon_theme_option_default"
internal const val ICON_THEME_OPTION_MONOCHROME_TAG = "icon_theme_option_monochrome"
internal const val KEYBOARD_AUTO_SHOW_SWITCH_TAG = "keyboard_auto_show_switch"
internal const val WALLPAPER_SHOWN_SWITCH_TAG = "wallpaper_shown_switch"
internal const val CHANGE_WALLPAPER_BUTTON_TAG = "change_wallpaper_button"
internal const val SHOW_AGENDA_SWITCH_TAG = "show_agenda_switch"
internal const val CONTACT_SEARCH_SWITCH_TAG = "contact_search_switch"
internal const val CALENDAR_SEARCH_SWITCH_TAG = "calendar_search_switch"
internal const val ANALYTICS_SWITCH_TAG = "analytics_switch"
internal const val DOCK_RECENTS_SCROLL_START_CHEVRON_TAG = "dock_recents_scroll_start_chevron"
...
internal const val RESIZE_WIDGET_ACTION_TAG = "resize_widget_action"
internal const val MOVE_UP_WIDGET_ACTION_TAG = "move_up_widget_action"
internal const val MOVE_DOWN_WIDGET_ACTION_TAG = "move_down_widget_action"
internal const val MOVE_START_WIDGET_ACTION_TAG = "move_start_widget_action"
internal const val MOVE_END_WIDGET_ACTION_TAG = "move_end_widget_action"
internal const val WIDGET_RESIZE_HANDLE_TAG = "widget_resize_handle"
internal const val SETTINGS_BUTTON_TAG = "settings_button"
internal const val PLAY_UPDATE_BADGE_TAG = "play_update_badge"
internal const val SETTINGS_SCREEN_TAG = "settings_screen"
internal const val SETTINGS_PREVIEW_TAG = "settings_preview"
internal const val SETTINGS_PREVIEW_WALLPAPER_SLOT_TAG = "settings_preview_wallpaper_slot"
internal const val SETTINGS_PREVIEW_HOME_WIDGETS_TAG = "settings_preview_home_widgets"
internal const val SETTINGS_PREVIEW_HOME_WIDGET_SKETCH_TAG = "settings_preview_home_widget_sketch"
...
